--- a/form.html
+++ b/form.html
@@ -11,6 +11,6 @@
         <div id="d-nav">
             <p><a href="index.html">Home</a><a href="form.html">Contact Us</a></p>
         </div>
-        <a id="contact" href="mailto:uhrdogwalk@gmail.com">Contact Us</a>
+        <a id="contact" href="mailto:uhrdogwalk@gmail.com"><h1>Contact Us</h1></a>
     </body>
 </html>
