--- a/form.html
+++ b/form.html
@@ -11,6 +11,12 @@
         <div id="d-nav">
             <p><a href="index.html">Home</a><a href="form.html">Contact Us</a></p>
         </div>
-        <a id="contact" href="mailto:uhrdogwalk@gmail.com"><h1>Contact Us</h1></a>
+        <form action="/form.php" method="get">
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+            <label for="lname">Last name:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <input type="submit" value="Submit">
+        </form>
     </body>
 </html>
