--- a/form.html
+++ b/form.html
@@ -11,12 +11,6 @@
         <div id="d-nav">
             <p><a href="index.html">Home</a><a href="form.html">Contact Us</a></p>
         </div>
-        <form action="/form.php" method="get">
-            <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <input type="submit" value="Submit">
-        </form>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPfYZ8oLWrWrq3M9i3iSyhPvyZ8pathsE5-Mcbi7AoIZXHqA/viewform?embedded=true" width="640" height="2000" frameborder="0" marginheight="0" marginwidth="0" id="form">Loading…</iframe>
     </body>
 </html>
