--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <body id="d-main">
         <h1 id="h-main">Doggie Day Care</h1>
         <div id="d-nav">
-            <p><a href="index.html">Home</a><a href="form.html">Contact Us</a></p>
+            <p><a href="index.html">Home</a><a href="form.html">Contact Us</a><a href="pricing.html">Pricing</a></p>
+        </div>
+        <div id="center">
+            <h1>Upper Hastings Ranch</h1>
+            <h3>We operate out of Upper Hastings Ranch in Pasadena</h3>
+            <img src="Assets/image0.jpeg" width=600px>
         </div>
     </body>
 </html>
