--- a/pricing.html
+++ b/pricing.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contact Us</title>
+        <title>Pricing</title>
         <link href="style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     </head>
     <body id="d-main">
-        <h1 id="h-main">Contact Us</h1>
+        <h1 id="h-main">Pricing</h1>
         <div id="d-nav">
             <p><a href="index.html">Home</a><a href="form.html">Contact Us</a><a href="pricing.html">Pricing</a></p>
         </div>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdPfYZ8oLWrWrq3M9i3iSyhPvyZ8pathsE5-Mcbi7AoIZXHqA/viewform?embedded=true" width="640" height="980" frameborder="0" marginheight="0" marginwidth="0" id="form">Loading…</iframe>
+        <div id="center">
+            <h1>Walking</h1>
+            <p>Price for us walking your dog is $5</p>
+            <br>
+            <h1>Day Care</h1>
+            <p>Price for one day dropoff is $20</p>
+            <br>
+            <h1>Extended Stay</h1>
+            <p>Price is $15 per day</p>
+        </div>
     </body>
 </html>
